<resources>
    <string name="app_name">Mobile Billing</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="login_password">********</string>
    <string name="signup_btn">Sign Up</string>
    <string name="showing_code_in_fragment">Showing code in fragment</string>
    <string name="scan_qr_code">SCAN QR CODE</string>
    <string name="name">Name</string>
    <string name="empty">---</string>
    <string name="site_name">Site Name</string>
    <string name="scan_a_code">Scan a QR Code</string>
    <string name="login_email">johndoe@gmail.com</string>
    <string name="result_not_found">Result Not Found</string>
    <string name="show_scanner_from_fragment">Show Scanner From Fragment</string>
    <string name="reset_password_link">Reset Password Link</string>
    <string name="reset_password">Reset</string>
    <string name="sharebutton">Share</string>
    <string name="productsPage">Products</string>
    <string name="textView3">Sign in with Google</string>
    <string name="resetbtn">Reset Password</string>
    <string name="textView5">OR</string>
    <string name="textView6">Quantity</string>
    <string name="forgotpassword">Reset your password here</string>
    <string name="editText2">Enter your email here</string>
    <string name="textView4">Email</string>
    <string name="editText1">Enter your email here</string>
    <string name="totalLabel">Total:</string>
    <string name="Checkoutbtn">Checkout</string>

</resources>
