<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    tools:context=".CreateAccountActivity">

    <EditText
        android:id="@+id/et_first_name"
        style="@style/viewCustom"
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="69dp"
        android:ems="10"
        android:fontFamily="Helvetica"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_last_name"
        style="@style/viewCustom"
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:layout_below="@id/et_first_name"
        android:layout_marginStart="39dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="206dp"
        android:ems="10"
        android:fontFamily="Helvetica"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/et_first_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471" />

    <EditText
        android:id="@+id/et_email"
        style="@style/viewCustom"
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:layout_below="@id/et_last_name"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="224dp"
        android:ems="10"
        android:fontFamily="Helvetica"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name" />

    <EditText
        android:id="@+id/et_password"
        style="@style/viewCustom"
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:layout_below="@id/et_email"
        android:layout_marginStart="39dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="302dp"
        android:ems="10"
        android:fontFamily="Helvetica"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/et_last_name" />

    <Button
        android:id="@+id/btn_register"
        style="@style/viewCustom"
        android:layout_width="210dp"
        android:layout_height="47dp"
        android:layout_below="@id/et_password"
        android:layout_marginStart="112dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="193dp"
        android:layout_marginBottom="562dp"
        android:background="#523208"
        android:text="@string/create_act"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />


</androidx.constraintlayout.widget.ConstraintLayout>